--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build RVMob (non-release)
 on:
   push:
 
-jobs: 
+jobs:
   # build-win:
   #   runs-on: windows-latest
   #   steps:
@@ -16,7 +16,7 @@ jobs:
   #         cache: "yarn"
   #     - name: Set up Java
   #       uses: actions/setup-java@v3
-  #       with: 
+  #       with:
   #         java-version: '11'
   #         distribution: 'microsoft'
   #     - name: Install and prepare dependencies
@@ -25,7 +25,7 @@ jobs:
   #       run: npx react-native build-android --mode debug
   #     - name: Upload debug APK
   #       uses: actions/upload-artifact@v3
-  #       with: 
+  #       with:
   #         path: D:\a\rvmob\rvmob\android\app\build\outputs\apk\debug\app-debug.apk
   #         name: RVMob-Debug-${{ github.sha }}.apk
   build-linux:
@@ -37,10 +37,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: "yarn"
+          cache: 'yarn'
       - name: Set up Java
         uses: actions/setup-java@v3
-        with: 
+        with:
           java-version: '11'
           distribution: 'microsoft'
       - name: Install and prepare dependencies
@@ -51,8 +51,8 @@ jobs:
         run: npx react-native build-android --mode debug
       - name: Prepare debug APK
         run: mv app-debug.apk RVMob-Debug-${{ github.sha }}.apk
-        working-directory: /home/runner/work/rvmob/rvmob/android/app/build/outputs/apk/debug/
+        working-directory: /home/runner/work/dvmob/dvmob/android/app/build/outputs/apk/debug/
       - name: Upload debug APK
         uses: actions/upload-artifact@v3
-        with: 
-          path: /home/runner/work/rvmob/rvmob/android/app/build/outputs/apk/debug/RVMob-Debug-${{ github.sha }}.apk
+        with:
+          path: /home/runner/work/dvmob/dvmob/android/app/build/outputs/apk/debug/RVMob-Debug-${{ github.sha }}.apk
